# soloscale-mistral-mcp-hackathon-2025

./: .gitignore  MCP_OVERVIEW.md  README.md  generate_demo_html.py  install.sh  log.txt  main.py  package.json  piper_web_integration.py  pyproject.toml  requirements.txt  sample_YogaPoseRecord  start.sh  verify_transport.sh
alpic/: transport_marker.py
data_preprocessing/: clean_yoga_simple.py
dataset/: cleaned_yoga_poses.json  cleaned_yoga_poses_simple.json  yoga_sequencing.json
documentation/: MCP_OVERVIEW.md
poseflow-mcp/: main.py  pyproject.toml  requirements.txt
poseflow-mcp/src/poseflow_mcp/: __init__.py  mp_estimator.py  pyproject.toml  server.py  server_http.py
poseflow_mcp/: README.md  main.py  package-lock.json
poseflow_mcp/alpic/: transport_marker.py
poseflow_mcp/src/poseflow_backend/: .gitignore  Dockerfile  README.md  landmarks.json  package-lock.json  package.json  poses.ref.json  server.js
poseflow_mcp/src/poseflow_backend/src/: constants.ts  pose.ts  server.ts
poseflow_mcp/src/poseflow_mcp/: adapter.py  local_http.py  notifications.py
server_infos/: DEPLOYMENT_SUCCESS.md
src/: schemas.ts  server.ts  toolList.ts
src/backend/db/: __init__.py  upload_to_qdrant_cloud.py
src/mcpservers/: enhanced_yoga_curriculum_generator.py  yoga_curriculum_mcp_server.py
src/tools/: reminder.ts  send-message.ts
src/utils/: channelUtils.ts  studentDataset.ts
test_mcpservers_locally/: quick_server_test.py
tests/: demo_audio_generator.py  run_audio_generator.py  test_embedded_audio.py  test_openai_integration.py  test_server.py  test_simple_audio.py  test_voxtral_feature.py
