[project]
name = "yoga-sequencing-mcp-server"
version = "0.1.0"
description = "Yoga Teacher Sequencing MCP Server with Qdrant Vector Database Integration"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Yoga Sequencing Team" }]
keywords = ["mcp", "yoga", "sequencing", "qdrant", "wellness", "teacher-training"]
dependencies = [
    "fastmcp>=0.2.0",
    "pydantic>=2.11.7",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "black>=25.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true