[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soloscale-poseflow"
version = "0.1.0"
description = "MCP yoga pose corrector (streamable-http)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp==1.14.0",
  "fastapi==0.115.4",
  "starlette==0.40.0",
  "uvicorn==0.31.1",
  "pydantic>=2.11,<3.0",
  "httpx==0.27.2",
  "python-dotenv==1.0.1",
  "requests>=2.32.5",
]
