[project]
name = "mcp-server-template"
version = "0.1.0"
description = "Yoga Class Sequencing MCP Server with Qdrant Integration"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Yoga Sequencing Team" }]
keywords = ["mcp", "yoga", "sequencing", "qdrant", "wellness"]
dependencies = [
    "fastmcp",
    "pydantic>=2.11.7",
    "httpx>=0.24.0",
    "openai>=1.107.2",
    "piper-tts>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
]
