[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poseflow-mcp"
version = "0.1.0"
description = "soloscale_poseflow — Yoga posture MCP (HTTP streamable)"
readme = "README.md"
requires-python = ">=3.10,<3.13"

# Minimal deps for first deploy (no mediapipe/opencv yet)
dependencies = [
  "mcp[cli]",
  "fastapi==0.115.3",
  "starlette==0.40.0",
  "uvicorn==0.30.6",
  "pydantic>=2.7,<3",
  "httpx>=0.24,<0.28",
  "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["src"]